[package]
name = "slapi-coin"
version = "1.0.0"
authors = ["Tverdoy <tverdoy.work@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.4.0"
serde_json = "1.0.133"

[dev-dependencies]
near-sdk = { version = "5.4.0", features = ["unit-testing", "legacy"] }
near-workspaces = { version = "0.11.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde = "1.0.215"
serde_json = "1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
