[package]
name = "slapi-coin"
version = "1.0.0"
authors = ["Tverdoy <tverdoy.work@gmail.com>"]
edition = "2021"
repository = "https://github.com/tverdoy/slapi"

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:git-e3c8adb4b5542cbfc159bb1534f2b94c900c1648-1.80.0"
image_digest = "sha256:4bbcdf985936e1cb9b71c627a00cb9b53546ac0c9ef6b175da2918c1dea21363"
container_build_command = ["cargo", "near", "build"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.4.0"
serde_json = "1.0.133"

[dev-dependencies]
near-sdk = { version = "5.4.0", features = ["unit-testing", "legacy"] }
near-workspaces = { version = "0.11.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde = "1.0.215"
serde_json = "1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
